--- a/application.yml
+++ b/application.yml
@@ -9,6 +9,14 @@ eureka:
     prefer-ip-address: true
     
 management:
+  endpoints:
+    web:
+      exposure:
+        include: *
+    health:
+      show-details: always
   tracing:
     sampling:
       probability: 1.0
+  
+
