--- a/application.yml
+++ b/application.yml
@@ -12,7 +12,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: *
+        include: '*'
     health:
       show-details: always
   tracing:
