--- a/application.yml
+++ b/application.yml
@@ -20,5 +20,8 @@ management:
       probability: 1.0
   metrics:
     enabled: true
-  
+
+logging:
+  pattern:
+    level: %5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 
