--- a/application.yml
+++ b/application.yml
@@ -8,15 +8,15 @@ eureka:
     #hostname: service-registry
     prefer-ip-address: true
     
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
-    health:
-      show-details: always
-  tracing:
-    sampling:
-      probability: 1.0
+# management:
+#   endpoints:
+#     web:
+#       exposure:
+#         include: '*'
+#     health:
+#       show-details: always
+#   tracing:
+#     sampling:
+#       probability: 1.0
 
 
