--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,42 @@
+spring:
+  cloud:
+    discovery:
+      enabled: false
+    config:
+      enabled: false
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  tracing:
+    sampling:
+      probability: 1.0
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: true
+
+logging:
+  pattern:
+    level: "%5p app_name=[${spring.producer.name:} trace_id=%mdc{trace_id:-} span_id=%mdc{span_id:-} trace_flags=%mdc{trace_flags} %p]"
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile:
+      - docker
+  cloud:
+    config:
+        enabled: true
+    discovery:
+      enabled: true
+
 eureka:
   client:
     register-with-eureka: true
@@ -7,16 +46,6 @@ eureka:
   instance:
     #hostname: service-registry
     prefer-ip-address: true
-    
-# management:
-#   endpoints:
-#     web:
-#       exposure:
-#         include: '*'
-#     health:
-#       show-details: always
-#   tracing:
-#     sampling:
-#       probability: 1.0
+
 
 
